# ConCat

./: .gitignore  LICENSE  README.md  pyproject.toml
concat/: __init__.py  __main__.py  cli.py  combine.py
