[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "concat-tool"
version = "0.1.0"
description = "ConCat: flexible, robust multi-file concatenation toolkit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "E. Bring Horvath" }
]
dependencies = [
  "pandas>=1.3",
  "tqdm>=4.60",
]

[project.scripts]
concat = "concat.cli:main"
